--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,62 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title><%= title %></title>
-    <!--css section -->
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="@fortawesome/fontawesome-free/css/all.min.css" />
-    <link rel="stylesheet" href="/Content/app.css/" />
-  </head>
-  <body>
+<%-include partials/header.ejs%>
+<%-include partials/main_nav.ejs%>
     <!--Main Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">COMP229</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <!--Home-->
-            <li class="nav-item active">
-              <a class="nav-link active" aria-current="page" href="Home"><i class="fa-light fa-house-chimney"></i>HomePage</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link active" aria-current="page" href="About"><i class="fa-light fa-address-card"></i>About Me</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link active" aria-current="page" href="About"><i class="fa-light fa-palette"></i>Products</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link active" aria-current="page" href="About"><i class="fa-sharp fa-solid fa-computer-speaker"></i>Services</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link active" aria-current="page" href="About"><i class="fa-regular fa-sim-cards"></i>Contact Me</a>
-            </li>
-        </div>
-      </div>
-    </nav>
+    
     <main class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to the <%=title%> HomePage</h1>
-        <p>Welcome to the <%= title %> Page</p>
+        <h1 class="display-4"> Welcome to the <%=title%> HomePage </h1>
       </div>
     </main>
-      <footer>
-        <nav class="navbar fixed-bottom navbar-dark bg-dark">
-          <div class="container-fluid">
-            <h3 class="display-4 -navbar-text">&copy; 2023 all right reserved</h3>
-          </div>
-        </nav>
-      </footer>
+
+    
     <!--h1><%= title %></h1>-->
-    <p>Welcome to <%= title %> HomePage</p>
+    <!--p>Welcome to <%= title %> HomePage</p>-->
     <!--script section -->
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/Scripts/app.js"></script>
-  </body>
-</html>
+<%-include partials/bottom_nav.ejs%>
+<%-include partials/footer.ejs%>
