upgrade3 project assignemt1 final project

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,3 +5,11 @@
 <%-include partials/main_nav.ejs%>
 <%-include partials/bottom_nav.ejs%>
 <%-include partials/footer.ejs%>
+<%-include partials/home.ejs%>
+<%-include partials/aboutme.ejs%>
+<%-include partials/projects.ejs%>
+<%-include partials/services.ejs%>
+<%-include partials/contacts.ejs%>
+
+
+
