--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,51 +1,54 @@
+<!--     Author- Jose Muniz       -->
+<!--     StudentID-301316969     -->
+<!--     Last Updated on 05/02/2023      -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <!--div class="container-fluid">-->
-      <a class="navbar-brand" href="#">COMP229</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <!--Home-->
-          <% if(title==" Home"){%>
-          <li class="nav-item active">
-            <%}else{%>
-              <li class="nav-item">
-                <%}%>
-              <a class="nav-link active" aria-current="page" href="Home"><i class="fa-solid fa-house-chimney"></i> Home</a>        
-          </li>
-          
-          <% if(title==" About Me"){%>
-          <li class="nav-item active">
-            <%}else{%>
-              <li class="nav-item">
-                <%}%>
-            <a class="nav-link active" aria-current="page" href="About"><i class="fa-solid fa-address-card"></i> About Me</a>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="home">COMP229</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <!--Home-->
+        <% if(title=="Home"){%>
+        <li class="nav-item active">
+          <%}else{%>
+            <li class="nav-item">
+              <%}%>
+            <a class="nav-link active" aria-current="page" href="home"><i class="fa-solid fa-house-chimney"></i> Home</a>        
+        </li>
+        
+        <% if(title=="About Me"){%>
+        <li class="nav-item active">
+          <%}else{%>
+            <li class="nav-item">
+              <%}%>
+          <a class="nav-link active" aria-current="page" href="aboutme"><i class="fa-solid fa-address-card"></i> About Me</a>
 
-          </li>
-          <% if(title==" Products"){%>
-          <li class="nav-item active">
-            <%}else{%>
-              <li class="nav-item">
-                <%}%>  
-            <a class="nav-link active" aria-current="page" href="Products"><i class="fa-solid fa-bell-concierge"></i> Products</a>
-          </li>
+        </li>
+        <% if(title=="Projects"){%>
+        <li class="nav-item active">
+          <%}else{%>
+            <li class="nav-item">
+              <%}%>  
+          <a class="nav-link active" aria-current="page" href="projects"><i class="fa-solid fa-bell-concierge"></i> Projects</a>
+        </li>
 
-          <% if(title==" Services"){%>
-          <li class="nav-item active">
-            <%}else{%>
-              <li class="nav-item">
-                <%}%> 
-            <a class="nav-link active" aria-current="page" href="Services"><i class="fa-solid fa-satellite-dish"></i> Services</a>
-          </li>
+        <% if(title=="Services"){%>
+        <li class="nav-item active">
+          <%}else{%>
+            <li class="nav-item">
+              <%}%> 
+          <a class="nav-link active" aria-current="page" href="services"><i class="fa-solid fa-satellite-dish"></i> Services</a>
+        </li>
 
-          <% if(title==" Contact Me"){%>
-          <li class="nav-item active">
-            <%}else{%>
-              <li class="nav-item">
-                <%}%>   
-            <a class="nav-link active" aria-current="page" href="Contact"><i class="fa-solid fa-address-book"></i> Contact Me</a>
-          </li>
-      </div>
-    <!--/div>-->
-  </nav>
+        <% if(title=="Contact Me"){%>
+        <li class="nav-item active">
+          <%}else{%>
+            <li class="nav-item">
+              <%}%>   
+          <a class="nav-link active" aria-current="page" href="contacts"><i class="fa-solid fa-address-book"></i> Contact Me</a>
+        </li>
+    </div>
+  </div>
+</nav>
