upgrade4 project assignemt1 final project

--- a/views/partials/aboutme.ejs
+++ b/views/partials/aboutme.ejs
@@ -9,7 +9,7 @@
       <div class="card mb-3" style="margin: auto; padding: 5%;">
         <div class="row g-0">
           <div class="col-md-4 text-center">
-            <img src="images\IMG01.JPEG" class="img-fluid rounded-start" alt="..." style="width:80%">
+            <img src="images\IMG01.JPG" class="img-fluid rounded-start" alt="..." style="width:80%">
           </div>
           <div class="col-md-8">
             <div class="card-body">
