modified:   bin/www 	modified:   index.js 	deleted:    public/images/IMG01.jpeg 	deleted:    public/images/IMG01.jpg 	modified:   views/error.ejs 	modified:   views/partials/aboutme.ejs 	modified:   views/partials/footer.ejs 	modified:   views/partials/header.ejs 	public/images/IMG02.jpg

--- a/views/partials/aboutme.ejs
+++ b/views/partials/aboutme.ejs
@@ -9,7 +9,7 @@
       <div class="card mb-3" style="margin: auto; padding: 5%;">
         <div class="row g-0">
           <div class="col-md-4 text-center">
-            <img src="images\IMG01.JPG" class="img-fluid rounded-start" alt="..." style="width:80%">
+            <img src="images\IMG02.JPG" class="img-fluid rounded-start" alt="..." style="width:80%">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -22,8 +22,7 @@
                 I participated in this Diploma programme in order to expand my knowledge of artificial intelligence (AI) and gain some ideas to utilise in the Financial Services industry, where I presently work.<br>
                 I am extremely interested in technology and data processing.<br>
                 </p>
-                <a href="Others\Jose_Muniz_Summary_2023.pdf" class="btn btn-primary btn-lg enabled" tabindex="-1" role="button" aria-disabled="true" download="Resume">Download Resume</a> -->
-              
+                <a href="Others\Jose_Muniz_Summary_2023.pdf" class="btn btn-primary btn-lg enabled" tabindex="-1" role="button" aria-disabled="true" download="Resume">Download Resume</a>
             </div>
           </div>
         </div>
